<resources>
    <string name="app_name">ЦДО ИТМО</string>
    <string name="title_activity_login">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="cdo">ЦДО</string>
    <string name="invalid_login_password">Неверный логин/пароль</string>
    <string name="required_login_password">Необходимо указать логин/пароль</string>
    <string name="no_connection">Нет подключения к сети</string>
    <string name="redo">Повторить</string>
    <string name="e_journal">Электронный журнал</string>
    <string name="protocol_changes">Протокол изменений</string>
    <string name="rating">Рейтинг</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="exiting">Выходим из аккаунта</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="logged_out">Вы вышли из аккаунта</string>
    <string name="failed_to_open_fragment">Не удалось открыть вкладку</string>
    <string name="loading">Загрузка</string>
    <string name="load_failed">Загрузка не удалась</string>
    <string name="auth_failed">Авторизация не удалась</string>
    <string name="semester">семестр</string>
    <string name="update_date">Последнее обновление:</string>
    <string name="year">Год</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum</string>
    <string name="lorem_number" translatable="false">99.99</string>
    <string name="lorem_number_short" translatable="false">99</string>
    <string name="auth_check">Авторизация</string>
    <string name="authorization">Авторизация</string>
    <string name="authorized">Авторизован</string>
    <string name="for_the">За</string>
    <string name="last_week">последнюю неделю</string>
    <string name="last_2_weeks">последние 2 недели</string>
    <string name="last_3_weeks">последние 3 недели</string>
    <string name="last_4_weeks">последние 4 недели</string>
    <string name="no_changes_for_period">Нет изменений за указанный период</string>
    <string name="course">курс</string>
    <string name="detailed_rating">Топ-50 рейтинг</string>
    <string name="your_rating">Ваш рейтинг</string>
    <string name="settings">Настройки</string>
    <string name="general">Основные</string>
    <string name="general_settings">Основные настройки</string>
    <string name="notifications">Уведомления</string>
    <string name="pref_default_fragment">Вкладка по умолчанию</string>
    <string name="pref_use_cache">Кэшировать данные на диске</string>
    <string name="pref_initial_offline">Запускать в оффлайн режиме</string>
    <string name="pref_initial_offline_summary">При старте приложения</string>
    <string name="pref_auto_logout">Автовыход</string>
    <string name="pref_auto_logout_summary">Автоматический выход из аккаунта</string>
    <string name="pref_use_notifications">Уведомления о новых баллах</string>
    <string name="pref_use_notifications_summary">Отслеживать изменения протокола изменений</string>
    <string name="pref_notify_network_unmetered">Проверять только по Wi-Fi</string>
    <string name="pref_notify_network_unmetered_summary">Не использовать мобильные данные</string>
    <string name="pref_notify_frequency">Частота проверки изменений</string>
    <string name="pref_notify_sound">Звук уведомления</string>
    <string name="pref_ringtone_silent">Без звука</string>
    <string name="pref_notify_vibrate">Вибрация</string>
    <string name="pref_category_system">Системные настройки</string>
    <string name="pref_allow_send_reports">Отправлять отчеты об ошибках</string>
    <string name="pref_allow_send_reports_summary">Отчеты собираются и обрабатываются при помощи Firebase Crashlytics. Сбор отчетов о сбоях помогает оперативно исправлять ошибки</string>
    <string name="pref_allow_collect_analytics">Отправлять статистику использования</string>
    <string name="pref_allow_collect_analytics_summary">Статистика собирается и обрабатывается при помощи Google Analytics for Firebase. Сбор анонимной статистики помогает совершенствовать приложение</string>
    <string name="attention">Внимание</string>
    <string name="action_1">событие</string>
    <string name="action_2">события</string>
    <string name="action_3">событий</string>
    <string name="pref_light_theme">Светлая тема</string>
    <string name="pref_dark_theme">Темная тема</string>
    <string name="pref_default_theme_ext">Тема по умолчанию</string>
    <string name="pref_light_theme_ext">Светлая тема</string>
    <string name="pref_dark_theme_ext">Темная тема</string>
    <string name="pref_white_theme_ext">Блистательно белая тема</string>
    <string name="pref_black_theme_ext">Невероятно черная тема</string>
    <string name="about">О приложении</string>
    <string name="app_info_disclaimer">Обратите внимание, что данное приложение не является официальным\n<a href="https://bukhmastov.github.io/cdoitmo/policy">Политика конфиденциальности</a></string>
    <string name="app_info_dev">Бухмастов Алексей</string>
    <string name="app_info_mail_dev" translatable="false">bukhmastov-alex@ya.ru</string>
    <string name="offline_mode">Оффлайн режим</string>
    <string name="schedule_lessons">Расписание занятий</string>
    <string name="search">Поиск</string>
    <string name="schedule_lessons_search_view_hint">Группа, аудитория, преподаватель…</string>
    <string name="schedule_exams_search_view_hint">Группа, преподаватель…</string>
    <string name="schedule_attestations_search_view_hint">Группа…</string>
    <string name="choose_teacher">Выберите преподавателя</string>
    <string name="tab_all">Все</string>
    <string name="tab_even">Четная</string>
    <string name="tab_odd">Нечетная</string>
    <string name="practice">Практика</string>
    <string name="lecture">Лекция</string>
    <string name="lab">Лабораторная</string>
    <string name="srs">СРС</string>
    <string name="group">Группа</string>
    <string name="room">Аудитория</string>
    <string name="school_week">учебная неделя</string>
    <string name="eregister_load_failed_retry_in_minute">Не удалось загрузить электронный журнал\nПовторите попытку через минуту</string>
    <string name="load_failed_retry_in_minute">Загрузка не удалась\nПовторите попытку через минуту</string>
    <string name="schedule_exams">Расписание сессии</string>
    <string name="no_exams">Экзаменов нет</string>
    <string name="no_credits">Зачетов нет</string>
    <string name="no_lessons">Занятий нет</string>
    <string name="exam">Экзамен</string>
    <string name="credit">Зачет</string>
    <string name="diffcredit">Дифференцированный зачет</string>
    <string name="exams">Экзамены</string>
    <string name="credits">Зачеты</string>
    <string name="consult">Консультация</string>
    <string name="room_short">Ауд.</string>
    <string name="place">Место</string>
    <string name="room101">101 аудитория</string>
    <string name="room101create">Подать заявку</string>
    <string name="wrong_response_from_server">Сервер вернул неверный ответ</string>
    <string name="limit">Лимит</string>
    <string name="last">Осталось</string>
    <string name="penalty">Штраф</string>
    <string name="no_requests">Заявок нет</string>
    <string name="deny_request">Удаляем заявку</string>
    <string name="room101_auth_failed">Не удалось авторизоваться в системе</string>
    <string name="add_request">Подача заявки</string>
    <string name="close">Закрыть</string>
    <string name="back">Назад</string>
    <string name="forward">Вперед</string>
    <string name="device_offline_action_refused">Действие недоступно в оффлайн режиме</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="request_deny">Отклонение заявки</string>
    <string name="request_deny_1">Вы уверены, что хотите удалить заявку?</string>
    <string name="request_deny_2">Отменить данное действие будет невозможно</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="do_cancel">Отменить</string>
    <string name="next">Далее</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="error_occurred_while_room101_request">Произошла ошибка во время подачи заявки</string>
    <string name="right_now">только что</string>
    <string name="sec_past">сек. назад</string>
    <string name="min_past">мин. назад</string>
    <string name="hour_past">час. назад</string>
    <string name="need_to_peek_date">Необходимо выбрать дату сеанса</string>
    <string name="need_to_peek_time_start">Необходимо выбрать время начала сеанса</string>
    <string name="need_to_peek_time_end">Необходимо выбрать время конца сеанса</string>
    <string name="data_loading">Загрузка данных</string>
    <string name="data_handling">Обработка данных сервером</string>
    <string name="data_initializing">Инициализация данных</string>
    <string name="peek_date">Выберите дату сеанса</string>
    <string name="no_date_to_peek">Нет доступных дат для записи в 101 кабинет</string>
    <string name="peek_time_start">Выберите время начала сеанса</string>
    <string name="no_time_to_peek">Нет доступного времени для записи в 101 кабинет</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="cache_and_refresh">Кэширование и обновление</string>
    <string name="clear_schedule_cache">Очистить кэш расписаний</string>
    <string name="term_picker">Выбор семестра</string>
    <string name="period_picker">Период изменений за</string>
    <string name="default_schedule">Расписание по умолчанию</string>
    <string name="week_picker">Выбор недели</string>
    <string name="cache_schedule">Кэшировать все расписания</string>
    <string name="pref_schedule_lessons_scroll_to_day">Прокручивать к текущему дню</string>
    <string name="current_lesson">Текущая пара</string>
    <string name="lessons_day_end">Конец учебного дня</string>
    <string name="delete_lesson">Удалить занятие</string>
    <string name="reduce_lesson">Скрыть занятие</string>
    <string name="restore_lesson">Восстановить занятие</string>
    <string name="copy_lesson">Создать копию занятия</string>
    <string name="edit_lesson">Редактировать занятие</string>
    <string name="open_group_schedule">Открыть расписание группы</string>
    <string name="open_teacher_schedule">Открыть расписание преподавателя</string>
    <string name="open_room_schedule">Открыть расписание аудитории</string>
    <string name="open_location">Показать местоположение</string>
    <string name="pref_schedule_lessons_clear_additional_title">Очистить пользовательские изменения</string>
    <string name="pref_protocol_changes_track_title">Отображать изменения количества баллов</string>
    <string name="share">Поделиться</string>
    <string name="pref_open_system_notifications_settings">Открыть настройки уведомлений</string>
    <string name="add_to_cache">Добавить в кэш</string>
    <string name="add_lesson">Добавить занятие</string>
    <string name="share_changes">Поделиться изменениями</string>
    <string name="remove_changes">Очистить изменения</string>
    <string name="open_settings">Открыть настройки</string>
    <string name="add_military_day">Добавить военный день</string>
    <string name="help">Помощь</string>
    <string name="reset_preferences">Сбросить настройки</string>
    <string name="mode_simple">Простой режим</string>
    <string name="mode_post_process">Режим с постобработкой</string>
    <string name="crown">Отображать короны</string>
    <string name="beer">Отображать пиво</string>
</resources>