<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_lesson"
        android:title="@string/add_lesson" />

    <item
        android:id="@+id/add_to_cache"
        android:title="@string/add_to_cache" />

    <item
        android:id="@+id/remove_from_cache"
        android:title="@string/remove_from_cache" />

    <item
        android:id="@+id/add_military_day"
        android:title="@string/add_military_day" />

    <item
        android:id="@+id/share_changes"
        android:title="@string/share_changes" />

    <item
        android:id="@+id/remove_changes"
        android:title="@string/remove_changes" />

    <item
        android:id="@+id/open_settings"
        android:title="@string/open_settings" />

</menu>