<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/e_journal">
        <ListPreference
            android:key="pref_e_journal_term"
            android:title="@string/term_picker"
            android:entries="@array/pref_e_journal_term_titles"
            android:entryValues="@array/pref_e_journal_term_values"
            android:defaultValue="0" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/protocol_changes">
        <ListPreference
            android:key="pref_protocol_changes_weeks"
            android:title="@string/period_picker"
            android:entries="@array/pref_protocol_changes_weeks_titles"
            android:entryValues="@array/pref_protocol_changes_weeks_values"
            android:defaultValue="1" />
        <ListPreference
            android:key="pref_protocol_changes_mode"
            android:title="@string/pref_protocol_changes_mode_title"
            android:entries="@array/pref_protocol_changes_mode_titles"
            android:entryValues="@array/pref_protocol_changes_mode_values"
            android:defaultValue="advanced" />
        <SwitchPreference
            android:key="pref_protocol_changes_track"
            android:defaultValue="true"
            android:title="@string/pref_protocol_changes_track_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/schedule_lessons">
        <com.bukhmastov.cdoitmo.preferences.ScheduleLessonsPreference
            android:key="pref_schedule_lessons_default"
            android:title="@string/default_schedule"
            android:defaultValue='{"query":"auto","title":""}' />
        <ListPreference
            android:key="pref_schedule_lessons_week"
            android:title="@string/week_picker"
            android:entries="@array/pref_schedule_lessons_week_titles"
            android:entryValues="@array/pref_schedule_lessons_week_values"
            android:defaultValue="-1" />
        <SwitchPreference
            android:key="pref_schedule_lessons_scroll_to_day"
            android:defaultValue="true"
            android:title="@string/pref_schedule_lessons_scroll_to_day" />
        <SwitchPreference
            android:key="pref_schedule_lessons_compact_view_of_reduced_lesson"
            android:defaultValue="true"
            android:title="@string/pref_schedule_lessons_compact_view_of_reduced_lesson_title" />
        <SwitchPreference
            android:key="pref_schedule_lessons_use_cache"
            android:defaultValue="false"
            android:title="@string/cache_schedule" />
        <Preference
            android:key="pref_schedule_lessons_clear_cache"
            android:title="@string/clear_schedule_cache" />
        <Preference
            android:key="pref_schedule_lessons_clear_additional"
            android:title="@string/pref_schedule_lessons_clear_additional_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/schedule_exams">
        <com.bukhmastov.cdoitmo.preferences.ScheduleExamsPreference
            android:key="pref_schedule_exams_default"
            android:title="@string/default_schedule"
            android:defaultValue='{"query":"auto","title":""}' />
        <SwitchPreference
            android:key="pref_schedule_exams_use_cache"
            android:defaultValue="false"
            android:title="@string/cache_schedule" />
        <Preference
            android:key="pref_schedule_exams_clear_cache"
            android:title="@string/clear_schedule_cache" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_system">
        <SwitchPreference
            android:key="pref_allow_send_reports"
            android:defaultValue="true"
            android:title="@string/pref_allow_send_reports"
            android:summary="@string/pref_allow_send_reports_summary"/>
        <SwitchPreference
            android:key="pref_allow_collect_analytics"
            android:defaultValue="true"
            android:title="@string/pref_allow_collect_analytics"
            android:summary="@string/pref_allow_collect_analytics_summary"/>
        <SwitchPreference
            android:key="pref_allow_owner_notifications"
            android:defaultValue="true"
            android:title="@string/pref_allow_owner_notifications"
            android:summary="@string/pref_allow_owner_notifications_summary"/>
    </PreferenceCategory>

</PreferenceScreen>