<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="pref_use_notifications"
        android:defaultValue="true"
        android:title="@string/pref_use_notifications"
        android:summary="@string/pref_use_notifications_summary"/>

    <ListPreference
        android:key="pref_notify_frequency"
        android:dependency="pref_use_notifications"
        android:title="@string/pref_notify_frequency"
        android:entries="@array/pref_notifications_interval_titles"
        android:entryValues="@array/pref_notifications_interval_values"
        android:defaultValue="30" />

    <SwitchPreference
        android:key="pref_notify_network_unmetered"
        android:dependency="pref_use_notifications"
        android:defaultValue="false"
        android:title="@string/pref_notify_network_unmetered"
        android:summary="@string/pref_notify_network_unmetered_summary"/>

    <RingtonePreference
        android:key="pref_notify_sound"
        android:dependency="pref_use_notifications"
        android:title="@string/pref_notify_sound"
        android:defaultValue="content://settings/system/notification_sound"
        android:ringtoneType="notification" />

    <SwitchPreference
        android:key="pref_notify_vibrate"
        android:dependency="pref_use_notifications"
        android:defaultValue="true"
        android:title="@string/pref_notify_vibrate" />

    <Preference
        android:key="pref_open_system_notifications_settings"
        android:title="@string/pref_open_system_notifications_settings" />

</PreferenceScreen>