<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.bukhmastov.cdoitmo.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/general" />

    <header
        android:fragment="com.bukhmastov.cdoitmo.SettingsActivity$CachePreferenceFragment"
        android:icon="@drawable/ic_save"
        android:title="@string/cache_and_refresh" />

    <header
        android:fragment="com.bukhmastov.cdoitmo.SettingsActivity$NotificationsPreferenceFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />

    <header
        android:fragment="com.bukhmastov.cdoitmo.SettingsActivity$AdditionalPreferenceFragment"
        android:icon="@drawable/ic_build"
        android:title="@string/additional_prefs" />

    <header
        android:fragment="com.bukhmastov.cdoitmo.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_info"
        android:title="@string/about" />

</preference-headers>
