<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPopupBackgroundFill"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/current_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/lesson_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/lesson_remaining"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:text="@string/current_lesson"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lesson_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/lorem_ipsum"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorSeparator" />

    <RelativeLayout
        android:id="@+id/end_of_the_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/day_remaining"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:text="@string/lessons_day_end"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/day_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/lorem_ipsum"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>